<resources>
    <string name="app_name">RockPaper</string>
    <string name="sheldon">I cry because others are stupid, and that makes me sad.</string>
    <string name="btnPlay_text">Play</string>
    <string name="btnLogin_text">Login</string>
    <string name="btnExit_text">Exit</string>
    <string name="facebook_app_id">103945140230122</string>
    <string name="splashScreen_text">GAME</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="logout_text">Logout</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="profile_name">Profile Name</string>
    <string name="welcome_loser">Welcome, \n%1$s!</string>
    <string name="do_you_want_to_test">Do you want to test your luck?</string>
    <string name="welcome">Welcome \n %1$s!</string>
    <string name="login_cancelled">Login Cancelled</string>
    <string name="desc_google_icon">Google Icon</string>
    <string name="signed_out">Signed Out</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_text">Google Sign-In\nQuickstart</string>
    <string name="disconnect">Disconnect</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="won">Won</string>
    <string name="lost">Lost</string>
    <string name="zero">0</string>
    <string name="exit">Do you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="please_fill_forms">Please fill the forms</string>
</resources>
