<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/welcome_loser_do_you_want_to_test_your_luck"
        android:textAlignment="center"
        android:textSize="28sp" />

    <Button
        android:id="@+id/btn_play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginTop="48dp"
        android:background="@drawable/button_custom"
        android:text="@string/btnPlay_text"
        android:textSize="21sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="18dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:background="@drawable/button_custom"
        android:text="@string/btnLogin_text"
        android:textSize="21sp" />

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:background="@drawable/button_custom"
        android:text="@string/btnExit_text"
        android:textSize="21sp" />
</LinearLayout>