<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_new_userName"
            android:hint="@string/user_name"
            android:textColorHint="@color/green_button_unpressed_background"
            android:textColor="@color/green_button_pressed_background"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et_new_password"
            android:hint="@string/password"
            android:textColorHint="@color/green_button_unpressed_background"
            android:textColor="@color/green_button_pressed_background"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/et_new_email"
            android:hint="@string/email"
            android:textColorHint="@color/green_button_unpressed_background"
            android:textColor="@color/green_button_pressed_background"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
    </LinearLayout>


</android.support.v7.widget.CardView>